BugFix: popover overflow on mobile

--- a/src/styles/FormStyles/Form.sass
+++ b/src/styles/FormStyles/Form.sass
@@ -101,9 +101,8 @@
 
 @media all and (max-width: 760px) 
     #popover>form
-        margin-top: -15%
+        margin-top: -20%
         width: 90%
-        height: 150%
     #form-stepper-container
         box-sizing: border-box
         background-color: index.$light-background-color
