--- a/src/styles/FormStyles/Form2.sass
+++ b/src/styles/FormStyles/Form2.sass
@@ -13,7 +13,7 @@
         width: max(30%, 115px)
         box-sizing: border-box
         padding: 3%
-        height: 100%
+        height: fit-content
         display: flex
         flex-direction: column
         justify-content: space-between
