--- a/src/styles/Switch.sass
+++ b/src/styles/Switch.sass
@@ -2,6 +2,7 @@
 #switch
     width: 100%
     height: max(40px, 12%)
+    margin-top: 20px
     display: flex
     justify-content: center
     align-items: center
